package edu.fiuba.algo3.modeloNico.Mapa;

public class Mapa {
}
