@startuml
'https://plantuml.com/class-diagram

class Usuario

class Jugador

class Mapa

class Defensas

class Constructor

Usuario --> "Dice que construir"Constructor
Usuario --> "representa un"Jugador

Constructor -->"Construye" Defensas

Constructor "posiciona en" --> Mapa

class Enemigos

Enemigos "Se mueven en"--> Mapa

Defensas --> "Atacan"Enemigos
Enemigos "Atacan"-->  Jugador




@enduml